update chart.js which fixed misaligned data issue

--- a/app/assets/stylesheets/desktop/table.scss
+++ b/app/assets/stylesheets/desktop/table.scss
@@ -15,7 +15,7 @@ thead{
 th{
 	text-align: left;
 	padding: 10px 25px;
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: 400;
 }
 
@@ -24,7 +24,7 @@ tr{
 }
 
 td{
-	font-size: 18px;
+	font-size: 16px;
 	padding: 10px 25px;
 	&:first-child{
 		padding: 10px 25px 10px 0;
